# Paper-Analysis-DataSet

./: .gitignore  AGENTS.md  README.md  compound-engineering.local.md  pyproject.toml  sitecustomize.py
config/: doubao.template.yaml
data/benchmarks/paper-filter/: annotations-ai.jsonl  annotations-human.jsonl  conflicts.jsonl  merged.jsonl  records.jsonl  schema.json  split-manifest.json  stats.json
docs/: README.md
docs/benchmarks/: paper-filter-dataset-protocol.md  paper-filter-label-spec.md  paper-filter-ui-workflow.md
docs/brainstorms/: 2026-03-31-recommendation-benchmark-testset-requirements.md
docs/plans/: 2026-04-02-001-feat-balance-paper-filter-sub-labels-and-scheduling-coverage-plan.md
paper_analysis_dataset/: __init__.py
paper_analysis_dataset/domain/: benchmark.py
paper_analysis_dataset/services/: annotation_merge.py  annotation_pipeline.py  annotation_repository.py  annotator_selection.py  augment_benchmark.py  augmentation_plan.py  benchmark_builder.py  benchmark_importer.py  benchmark_reporter.py  benchmark_schema_validator.py  codex_abstract_translator.py  codex_annotator.py  codex_title_translator.py  doubao_abstract_translator.py  doubao_annotator.py  doubao_title_translator.py  evaluation_client.py  evaluation_reporter.py  evaluation_split.py  paper_filter_schema.py  rebalance_benchmark.py
paper_analysis_dataset/shared/: paths.py
paper_analysis_dataset/shared/clients/: __init__.py  codex_cli_client.py  doubao_client.py
paper_analysis_dataset/shared/conference/: __init__.py  paper_model.py  paperlists_parser.py
paper_analysis_dataset/tools/: annotate_paper_filter_benchmark.py  augment_paper_filter_benchmark.py  backfill_paper_filter_abstract_zh.py  backfill_pending_augmented_abstract_zh.py  backfill_pending_augmented_title_zh.py  cleanup_legacy_benchmark_protocol.py  evaluate_paper_filter_benchmark.py  import_paper_filter_samples.py  local_ci.py  rebalance_paper_filter_benchmark.py  rebuild_paper_filter_benchmark.py  translate_paper_filter_abstract_zh_codex.py  translate_paper_filter_title_zh_codex.py  validate_paper_filter_schema.py
paper_analysis_dataset/web/: annotation_app.py  view_models.py
paper_analysis_dataset/web/static/: annotation.css
paper_analysis_dataset/web/templates/: annotation_conflicts.html.j2  annotation_dashboard.html.j2  annotation_detail.html.j2  annotation_list.html.j2
tests/: __init__.py
tests/e2e/: test_evaluate_cli.py
tests/unit/: test_annotation_app.py  test_annotation_merge.py  test_annotation_repository.py  test_annotator_selection.py  test_async_tools.py  test_augment_paper_filter_benchmark.py  test_backfill_pending_augmented_abstract_zh.py  test_backfill_pending_augmented_title_zh.py  test_benchmark_builder.py  test_benchmark_dataset_contract.py  test_benchmark_importer.py  test_benchmark_schema_validator.py  test_cleanup_legacy_benchmark_protocol.py  test_codex_abstract_translator.py  test_codex_annotator_contract.py  test_codex_title_translator.py  test_doubao_abstract_translator.py  test_doubao_annotator.py  test_doubao_title_translator.py  test_evaluate_paper_filter_benchmark.py  test_evaluation_client.py  test_evaluation_reporter.py  test_evaluation_split.py  test_import_paper_filter_samples_cli.py  test_rebalance_paper_filter_benchmark.py
todos/: 001-pending-p1-rebalance-partial-batch-write-can-corrupt-benchmark-state.md  002-pending-p2-target-ratio-can-overshoot-far-below-30-percent.md
(+5 files in other folders)
