[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-analysis-dataset"
version = "0.1.0"
description = "Dataset, annotation, and benchmark tooling for Paper Analysis"
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.scripts]
paper-analysis-dataset-rebuild = "paper_analysis_dataset.tools.rebuild_paper_filter_benchmark:main"
paper-analysis-dataset-annotate = "paper_analysis_dataset.tools.annotate_paper_filter_benchmark:main"
paper-analysis-dataset-backfill = "paper_analysis_dataset.tools.backfill_paper_filter_abstract_zh:main"
paper-analysis-dataset-annotation-app = "paper_analysis_dataset.web.annotation_app:main"
paper-analysis-dataset-local-ci = "paper_analysis_dataset.tools.local_ci:main"

[tool.setuptools.packages.find]
include = ["paper_analysis_dataset*"]

[tool.setuptools.package-data]
"paper_analysis_dataset" = ["web/templates/*.j2", "web/static/*.css"]
